third_party/rust/paste/tests/ui/unsupported-modifier.stderr
error: unsupported modifier
 --> $DIR/unsupported-modifier.rs:2:11
  |
2 |     fn [<a:pillow>]() {}
  |           ^^^^^^^
