third_party/rust/paste/tests/ui/unsupported-modifier.rs
paste::item! {
    fn [<a:pillow>]() {}
}

fn main() {}
